[feat] add device namespace and corresponding api
