# web/attestation.go
@@ -1,16 +1,11 @@
 package web
 
 import (
-	"encoding/binary"
-	"encoding/hex"
 	"fmt"
-	"github.com/ethereum/go-ethereum/crypto"
 	"github.com/gin-gonic/gin"
-	"strings"
 	"teerminal/config"
 	"teerminal/constants"
 	"teerminal/service/encryption"
-	"time"
 )
 
 // @BasePath /api/v1/attestation
@@ -18,8 +13,6 @@ import (
 func RegisterAttestationRoutes(router *gin.Engine) {
 	attestation := router.Group("/api/v1/attestation")
 	{
-		attestation.GET("/enrollment", HandleGetDeviceEnrollment)
-		attestation.GET("/version", HandleGetVersionAttestation)
 		attestation.GET("/appkey", HandleGetAppDerivedKey)
 		attestation.POST("/sign", HandleSignWithAppDerivedKey)
 	}
@@ -36,12 +29,6 @@ type ApplicationKey struct {
 	PubKey string `json:"appPubKey"`
 }
 
-type Enrollment struct {
-	DeviceKey string `json:"deviceKey"`
-	Deadline  int64  `json:"deadline"`
-	Signature string `json:"signature"`
-}
-
 type SignRequest struct {
 	Data string `json:"data"` // Data is the data to be signed
 }
@@ -49,103 +36,6 @@ type SignRequest struct {
 type SignResponse struct {
 	PubKey    string `json:"pubKey"`
 	Signature string `json:"signature"`
-}
-
-// HandleGetDeviceEnrollment godoc
-// @Summary Get device enrollment key for current (simulated) tee version
-// @Description Get device enrollment key for current (simulated) tee version
-// @Description Please see also the DePhy evm sdk.
-// @Tags attestation
-// @Accept application/json
-// @Produce application/json
-// @Success 200 {object} Enrollment
-// @Router /api/v1/attestation/enrollment [get]
-func HandleGetDeviceEnrollment(c *gin.Context) {
-	// Deadline set to be 6hrs from now
-	deadline := time.Now().Add(6 * time.Hour).Unix()
-	// Pad to 256bit(32byte) length with 0s as prefix
-	deadlineBytes := binary.BigEndian.AppendUint64([]byte{}, uint64(deadline))
-	length := len(deadlineBytes)
-	prefix := make([]byte, 32-length)
-	deadlineBytes = append(prefix, deadlineBytes...)
-	// eth keccak256 hash of the deadline
-	msgHash := crypto.Keccak256(deadlineBytes)
-	msgSignPayload := append([]byte(constants.DeviceEnrollmentKey), msgHash...)
-	// Sign the payload with the root key
-	deviceRoot := encryption.DerivePrivateKey(config.GetRootKey(), []byte(constants.DeviceRootKey))
-	deviceRootPublic := encryption.GetPublicKey(deviceRoot)
-	signature, _ := encryption.Sign(deviceRoot, msgSignPayload)
-	// Return the enrollment key and deadline as hex
-	c.JSON(200, Enrollment{
-		DeviceKey: fmt.Sprintf("%x", deviceRootPublic),
-		Deadline:  deadline,
-		Signature: fmt.Sprintf("%x", signature),
-	})
-
-}
-
-// HandleGetVersionAttestation godoc
-// @Summary Get version attestation for current (simulated) tee version
-// @Description Get version attestation for current (simulated) tee version
-// @Tags attestation
-// @Accept application/json
-// @Produce application/json
-// @Param attestation query string true "Remote requester's nonce and signature, serialized as hex(64b nonce || 64b pubKey || 65b signature), in which signature is the signature of nonce || pubKey"
-// @Success 200 {object} Attestation
-// @Failure 400 {object} ErrorResponse
-// @Router /api/v1/attestation/version [get]
-func HandleGetVersionAttestation(c *gin.Context) {
-	// First check if attestation is provided
-	attestation := c.Query("attestation")
-	if attestation == "" {
-		c.JSON(400, ErrorResponse{Error: constants.MsgErrorMissingRemoteAttestation})
-		c.Next()
-		return
-	}
-	// Decode Attestation to bytes
-	attestationRawHex := strings.TrimPrefix("0x", attestation)
-	attestationRaw, err := hex.DecodeString(attestationRawHex)
-	if err != nil {
-		c.JSON(400, ErrorResponse{Error: constants.MsgErrorFailedHexDecodeRemoteAttestation})
-		c.Next()
-		return
-	}
-	// Check attestationRaw length
-	if len(attestationRaw) != 173 {
-		c.JSON(400, ErrorResponse{Error: constants.MsgErrorWrongRemoteAttestationLength})
-		c.Next()
-		return
-	}
-	// Parse nonce, pubKey and signature
-	nonce := attestationRaw[:64]
-	pubKey := attestationRaw[64:128]
-	signature := attestationRaw[128:]
-	// First do the verification of the signature
-	if !encryption.VerifySignature(nonce, pubKey, signature) {
-		c.JSON(400, ErrorResponse{Error: constants.MsgErrorWrongRemoteAttestationSignature})
-		c.Next()
-		return
-	}
-	// Then sign (nonce || pubKey || version) with the local private key
-	version := config.GetConfig().Version
-	var signable []byte
-	signable = append(signable, nonce...)
-	signable = append(signable, pubKey...)
-	signable = append(signable, []byte(version)...)
-	deviceRoot := encryption.DerivePrivateKey(config.GetRootKey(), []byte(constants.DeviceRootKey))
-	deviceCert := encryption.GetDeviceRootCert()
-	deviceRootCert := encryption.GenerateCert(config.GetRootKey(), []byte(constants.DeviceRootKey))
-	signature, _ = encryption.Sign(signable, deviceRoot)
-	// Create Concrete Cert
-	var cert []byte
-	cert = append(cert, deviceCert...)
-	cert = append(cert, deviceRootCert...)
-	// Return the attestation
-	c.JSON(200, Attestation{
-		Cert:           fmt.Sprintf("%x", cert),
-		AttestationVer: version,
-		Signature:      fmt.Sprintf("%x", signature),
-	})
 }
 
 // HandleGetAppDerivedKey godoc
